# cuda_rtracer

./: .gitignore  CMakeLists.txt  README.md  README.txt  dockerfile
include/: camera.cuh  error_check.cuh  hittable.cuh  hittable_list.cuh  interval.cuh  material.cuh  matrix.cuh  obj_loader.cuh  ray.cuh  ray.hpp  rt_weekend.cuh  sphere.cuh  triangle.cuh  vector.cuh  vector.hpp
output/: output.ppm  output1.ppm  output3.ppm  output_lamb.ppm
src/: camera.cu  hittable_list.cu  interval.cu  main.cu  material.cu  matrix.cu  obj_loader.cu  sphere.cu  triangle.cu
